# NFT

./: .gitignore  Cargo.toml  package.json
nft/: Cargo.toml  index.schema.json  index.wit
nft/src/: lib.rs
nft/ts/: index.ts
scripts/: deploy.ts  icon.ts  mint_token.ts  utils.ts
test-approval-receiver/: Cargo.toml
test-token-receiver/: Cargo.toml
