[package]
name = "non-fungible-token-wrapper"
version = "0.0.2"
authors = ["Near Inc <hello@near.org>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
near-primitives = "0.5.0"
near-sdk = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-3"}
near-contract-standards = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-3" }
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.1.1"

# remember to include a line for each contract
non-fungible-token = { path = "./nft" }
approval-receiver = { path = "./test-approval-receiver" }
token-receiver = { path = "./test-token-receiver" }
near-units = "0.2.0"

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
# remember to include a member for each contract
members = [
  "nft",
  "test-approval-receiver",
  "test-token-receiver",
]
